[gd_scene load_steps=5 format=3 uid="uid://384pip3anqnn"]

[ext_resource type="Script" uid="uid://dmygpiswehhkc" path="res://src/scene/prefab/ui/file_browser/file_browser_list_item.gd" id="1_6mmea"]
[ext_resource type="Texture2D" uid="uid://ht2wmw2vthd5" path="res://resource/texture/ui/file_browser/empty_file.png" id="2_s5wkw"]
[ext_resource type="StyleBox" uid="uid://cykoehg3qt4v8" path="res://resource/stylebox/item_selected_panel.stylebox" id="3_6nevw"]

[sub_resource type="FontVariation" id="FontVariation_u0lcb"]

[node name="file_browser_list_item" type="MarginContainer" node_paths=PackedStringArray("icon_rect", "image_icon_rect", "label", "selected_panel")]
offset_right = 21.0
offset_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_6mmea")
icon_rect = NodePath("hbox/AspectRatioContainer/icon_rect")
image_icon_rect = NodePath("hbox/AspectRatioContainer/icon_margin/image_icon_rect")
label = NodePath("hbox/label")
selected_panel = NodePath("selected_panel")

[node name="hbox" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="hbox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="icon_rect" type="TextureRect" parent="hbox/AspectRatioContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_s5wkw")
expand_mode = 1

[node name="icon_margin" type="MarginContainer" parent="hbox/AspectRatioContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
mouse_filter = 2

[node name="image_icon_rect" type="TextureRect" parent="hbox/AspectRatioContainer/icon_margin"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
mouse_filter = 2
expand_mode = 1

[node name="label" type="RichTextLabel" parent="hbox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_fonts/normal_font = SubResource("FontVariation_u0lcb")
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "example_file.txt"
scroll_active = false
vertical_alignment = 1

[node name="selected_panel" type="Panel" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_6nevw")
